Fixed: build, currency validation, docker compose, liquibase changelog, minor mistakes in classes and tests.